2013-01-16 Max Baak <mbaak@cern.ch>
        * Tagged HistFitter-00-00-23

2013-01-16 Max Baak <mbaak@cern.ch>
	M python/sample.py
	M python/fitConfig.py
	M python/prepareHistos.py
	* consistent lower edge between cuts histograms

2013-01-08 Max Baak <mbaak@cern.ch>
        M       python/fitConfig.py
	* Fixed buggy bin-boundaries for cuts channels

2013-01-11 David Cote <david.cote@cern.ch>
	* add -u option to pass arbitrary user-defined string from command line to configMgr.userArg.

2013-01-09 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/toy_utils.cxx: hypo test results are perfectly fine without a fit,
	do not require the presence of a fit result (but use it if there)

2013-01-08 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/ConfigMgr.cxx: pass full dirname into prefix for RooStats::AnalyzeHypoTestInverterResult 
	* src/HypoTestTool.cxx: plots using -l now go into the same directory as
	the file they used to create, rather than $CWD. Same for
	the root files with the limit results.

2013-01-08 Max Baak <mbaak@cern.ch>
	M       python/sample.py 
	* Change warning into debug statement
	M       scripts/HistFitter.py
	* Add python-like -c to command line.

2013-01-07 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/Utils.cxx: Util::GetComponent takes extra boolean parameter; if set
	to true, will not search for short region names but assumes the given name
	is the full one
	* scripts/YieldsTableTex.py: no longer check "if sample in name", but
	rather exact match -> issues with channels such as "ttbar" and "ttbarV"
	resolved (only one of them shows up otherwise)

2012-12-21 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/toy_utils.cxx: memory leak (fitresult not deleted) fixed
	* src/CombineWorkSpaces.cxx: memory leak (intermediate hypotest and
	fitresult pointers not deleted) fixed

2012-12-19 David Cote <david.cote@cern.ch>
	* added blindVR option to configManager
	
2012-12-19 Geert-Jan Besjes <geert-jan.besjes@cern.ch>