@@ -350,9 +350,10 @@ class fitConfig(object):
 
                 # Only apply weights and systematics to MC-derived samples
                 if not s.isData and not s.isDiscovery and not s.isQCD:
-                    # If the sample doesn't have weights then add them
-                    if len(self.sampleList[-1].weights) == 0:
-                        self.sampleList[-1].setWeights(self.weights)
+                    ## If the sample doesn't have weights then add them
+                    #if len(self.sampleList[-1].weights) == 0:
+                    #    self.sampleList[-1].setWeights(self.weights)
+                    self.sampleList[-1].addWeight(self.weights)
 
                     # Propagate systematics into sample
                     for (systName, syst) in self.systDict.items():
