@@ -126,20 +126,27 @@ class Sample(object):
         self.weights = deepcopy(weights)
         return
 
-    def addWeight(self, weight):
+    def addWeight(self, input):
         """
-        Add a weight to this sample and propagate
+        Add the weights for this sample
         """
-        if not weight in self.weights:
-            self.weights.append(weight)
+        if isinstance(input, list):
+            weights = input
         else:
-            raise RuntimeError("Weight %s already defined in sample %s" % (weight, self.name))
-        for syst in self.systDict.values():
-            if syst.type == "weight":
-                if not weight in syst.high:
-                    syst.high.append(weight)
-                if not weight in syst.low:
-                    syst.low.append(weight)
+            weights = [input]
+            pass
+
+        for weight in weights:
+            if not weight in self.weights:
+                self.weights.append(weight)
+            else:
+                raise RuntimeError("Weight %s already defined in sample %s" % (weight, self.name))
+            for syst in self.systDict.values():
+                if syst.type == "weight":
+                    if not weight in syst.high:
+                        syst.high.append(weight)
+                    if not weight in syst.low:
+                        syst.low.append(weight)
         return
 
     def removeWeight(self, weight):
